# sentiment-as-relevance-recommender

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  nixpacks.toml  requirements.txt
01_eda/: README.md
01_eda/figures/: README.md
01_eda/notebooks/: Analise_Exploratoria.ipynb  Avaliando os desalinhamentos.docx  README.md  contagem_avaliacoes_produtos.csv  distribuicao_produtos_avaliacoes_corpus_completo.py  distribuicao_produtos_avaliacoes_no_neutral.py  opinioes_por_polo.csv  opinioes_por_polo_no_neutral.py  top5_categorias_sentimento.csv  top5_categorias_sentimento.py
02_preprocessing/: README.md  split_data.py  split_data_no_neutral.py
02_preprocessing/bert/: README.md  tokenize.py
02_preprocessing/common/: README.md  preprocess.py
02_preprocessing/tfidf/: README.md  vectorize.py
03_sentiment_classifier/: README.md  sample_data.py
03_sentiment_classifier/bertimbau_ft/: README.md
03_sentiment_classifier/bertimbau_lr/: README.md  eval_bertimbau_lr.py  train_bertimbau_lr.py
03_sentiment_classifier/checkpoints/: README.md  bertimbau_lr_model.pkl  bertimbau_lr_results.json  llm_qwen_qwen3.5-9b_results.json  tfidf_bigrams_lr_model.pkl  tfidf_bigrams_lr_results.json  tfidf_bigrams_vectorizer.pkl  tfidf_both_lr_model.pkl  tfidf_both_vectorizer.pkl  tfidf_lr_results.json  (+2 more)
04_recommender/: README.md  build_index.py  config.py  data.py  demo.py  pyproject.toml  recommender.py
05_webapp/: README.md  handoff.md
05_webapp/backend/: README.md  app.py  pyproject.toml  run.sh
06_evaluation/: README.md
data/: README.md
docs/: README.md
(+93 files in other folders)
